Fixed bug #30760 (Remove MessageBox on win32 for E_CORE errors if display_startup_error is off).